--- a/index.html
+++ b/index.html
@@ -71,24 +71,77 @@
                 <!-- second navbar links -->
                 <div class="collapse navbar-collapse flex-grow-0" id="main-nav2">
                     <ul class="navbar-nav align-items-center">
-                        <!-- Load nav items via createNavItems function -->
+                        <!-- Nav items are loaded via createNavItems function -->
                     </ul>
                 </div>
             </nav>
-        </div>
 
-        <!-- main -->
-        <section id="intro">
-            <div class="container-lg my-5">
-                <div class="row justify-content-center">
-                    <div class="col-md-5 text-center text-md-start"></div>
+
+            <!-- main -->
+            <section id="intro">
+                <div class="container-lg my-5">
+                    <div class="row justify-content-center">
+                        <div class="col-md-5 text-center text-md-start"></div>
+                    </div>
                 </div>
-            </div>
-        </section>
-        <!-- footer -->
-        <section id="">
-
-        </section>
+            </section>
+            <!-- footer -->
+            <section id="footer">
+                <div class="container border-top pt-5">
+                    <div class="row">
+                        <div class="col-4">
+                            <div class="row">
+                                <img src="./assets/logo-black2.png" alt="footer logo" style="width: 50%;" class="mb-4">
+                                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Maxime nobis aliquam
+                                    voluptate culpa necessitatibus mollitia magnam inventore corrupti architecto rem!
+                                </p>
+                            </div>
+                            <div class="row">
+                                <div class="fw-bold mb-3">Accepted Payments</div>
+                                <div class="payment-container mb-3" id="payment-container">
+                                    <!-- Payment methods are loaded via createPaymentMethods function -->
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col text-center">
+                            <span class="fs-5 fw-bold">About us</span>
+                            <ul class="footer-items mt-3 list-unstyled">
+                                <li> About Shopcart </li>
+                                <li> Careers </li>
+                                <li> News & Blog </li>
+                                <li> Help </li>
+                                <li> Press Center </li>
+                                <li> Shop By Location </li>
+                                <li> Shopcart Brands </li>
+                                <li> Affiliate & Partners </li>
+                                <li> Ideas & Guides </li>
+                            </ul>
+                        </div>
+                        <div class="col text-center">
+                            <span class="fs-5 fw-bold">Services</span>
+                            <ul class="footer-items mt-3 list-unstyled">
+                                <li> Gift Card </li>
+                                <li> Mobile App </li>
+                                <li> Shipping & Delivery </li>
+                                <li> Order Pickup </li>
+                                <li> Account Signup </li>
+                            </ul>
+                        </div>
+                        <div class="col text-center">
+                            <span class="fs-5 fw-bold">Help</span>
+                            <ul class="footer-items mt-3 list-unstyled">
+                                <li> MN Help </li>
+                                <li> Returns </li>
+                                <li> Track Orders </li>
+                                <li> Contact Us </li>
+                                <li> Feedback </li>
+                                <li> Security & Fraud </li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
     </div>
 </body>
 
