--- a/index.html
+++ b/index.html
@@ -76,15 +76,45 @@
                 </div>
             </nav>
 
-
             <!-- main -->
             <section id="intro">
                 <div class="container-lg my-5">
-                    <div class="row justify-content-center">
-                        <div class="col-md-5 text-center text-md-start"></div>
+                    <!-- carousel -->
+                    <div class="row">
+                        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+                            <div class="carousel-indicators">
+                              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                            </div>
+                            <div class="carousel-inner">
+                              <div class="carousel-item active">
+                                <img src="https://fastly.picsum.photos/id/370/1100/300.jpg?hmac=yoOZLro9vg9hwrXj9lfzDc5kSAUY0h8wuWx-xSnGKZY" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block bg-black bg-opacity-25">
+                                  <h5>First slide label</h5>
+                                  <p>Some representative placeholder content for the first slide.</p>
+                                </div>
+                              </div>
+                              <div class="carousel-item">
+                                <img src="https://fastly.picsum.photos/id/668/1100/300.jpg?hmac=gIwmUkfTKEicIqdpogSzFkI3vReZVmUShrJEG9kER4M" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block bg-black bg-opacity-25">
+                                  <h5>Second slide label</h5>
+                                  <p>Some representative placeholder content for the second slide.</p>
+                                </div>
+                              </div>
+                              <div class="carousel-item">
+                                <img src="https://picsum.photos/1100/300" class="d-block w-100" alt="...">
+                                <div class="carousel-caption d-none d-md-block bg-black bg-opacity-25">
+                                  <h5>Third slide label</h5>
+                                  <p>Some representative placeholder content for the third slide.</p>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
                     </div>
                 </div>
             </section>
+
             <!-- footer -->
             <section id="footer">
                 <div class="container border-top pt-5">
