feat: top products section

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
             <!-- main -->
             <section id="intro">
-                <div class="container-lg my-5">
+                <div class="container my-5">
                     <!-- carousel -->
                     <div class="row">
                         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
@@ -112,6 +112,13 @@
                             </div>
                           </div>
                     </div>
+                    <!-- top products -->
+                    <div class="row">
+                        <div class="h1 mt-5">Shop our top products</div>
+                        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xxl-4 g-3" id="top-products-cards-container">
+                            <!-- Products are loaded via createProductCards function -->
+                        </div>
+                    </div>
                 </div>
             </section>
 
@@ -142,9 +149,6 @@
                                 <li> Help </li>
                                 <li> Press Center </li>
                                 <li> Shop By Location </li>
-                                <li> Shopcart Brands </li>
-                                <li> Affiliate & Partners </li>
-                                <li> Ideas & Guides </li>
                             </ul>
                         </div>
                         <div class="col text-center">
